[tool.poetry]
name = "turboasync"
version = "0.1.0"
description = ""
authors = ["Neil Botelho <neil.botelho321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.114.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
